--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches: [main]
 # gives me a button to trigger the workflow
-  workflow-dispatch:
+  workflow_dispatch:
 jobs:
   build:
     # env:
