--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: dockerized-cra-app2
-          environment_name: dockerized-cra-env2
+          environment_name: Dockerizedcraapp2-env2
           version_label: 1
           region: eu-central-1
           deployment_package: deploy.zip
