--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: dockerized-cra-app2
           environment_name: Dockerizedcraapp2-env2
-          # version_label: 1
+          version_label: 2
           region: eu-central-1
           deployment_package: deploy.zip
           existing_bucket_name: elasticbeanstalk-eu-central-1-327008777765
