remove specifying bucket name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,8 @@ jobs:
           version_label: 2
           region: eu-central-1
           deployment_package: deploy.zip
-          existing_bucket_name: elasticbeanstalk-eu-central-1-327008777765
+          use_existing_version_if_available: true
+#          existing_bucket_name: elasticbeanstalk-eu-central-1-327008777765
 
 # bucket name elasticbeanstalk-eu-central-1-327008777765
  # app dockerized-cra-app2
